# ChangeLog for net-p2p/mldonkey
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/mldonkey/ChangeLog,v 1.202 2008/02/25 14:42:06 jer Exp $

  25 Feb 2008; Jeroen Roovers <jer@gentoo.org> mldonkey-2.9.3.ebuild:
  Stable for HPPA (bug #211382).

  25 Feb 2008; Raúl Porcel <armin76@gentoo.org> mldonkey-2.9.3.ebuild:
  ia64/x86 stable wrt #211382

*mldonkey-2.9.3 (21 Jan 2008)

  21 Jan 2008; Raúl Porcel <armin76@gentoo.org> +mldonkey-2.9.3.ebuild:
  Version bump

  19 Jan 2008; Alexis Ballier <aballier@gentoo.org>
  mldonkey-2.9.2-r1.ebuild:
  explicitely allow ocaml 3.10* since 3.10.1 is there and is a bugfix release
  and mldonkey will bail out if it sees it...

*mldonkey-2.9.2-r1 (06 Jan 2008)

  06 Jan 2008; Raúl Porcel <armin76@gentoo.org> +mldonkey-2.9.2-r1.ebuild:
  Revision bump with a fix from Alexis Ballier to build without ocamlopt

  06 Jan 2008; Raúl Porcel <armin76@gentoo.org> mldonkey-2.9.2.ebuild:
  Remove RESTRICT=mirror as discussed with upstream

  23 Dec 2007; Raúl Porcel <armin76@gentoo.org> -mldonkey-2.9.0-r3.ebuild,
  -mldonkey-2.9.1.ebuild:
  old

  22 Dec 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  mldonkey-2.9.2.ebuild:
  ppc stable, bug #199902

  07 Dec 2007; Santiago M. Mola <coldwind@gentoo.org>
  files/mldonkey-gui.desktop:
  .desktop file fixed.

  23 Nov 2007; Samuli Suominen <drac@gentoo.org> mldonkey-2.9.2.ebuild:
  amd64 stable wrt #199902

  21 Nov 2007; Jeroen Roovers <jer@gentoo.org> mldonkey-2.9.2.ebuild:
  Stable for HPPA (bug #199902). Fixing quoting issues (again).

  21 Nov 2007; Raúl Porcel <armin76@gentoo.org> mldonkey-2.9.2.ebuild:
  ia64/x86 stable

  16 Nov 2007; Steve Dibb <beandog@gentoo.org> mldonkey-2.9.1.ebuild:
  amd64 stable, bug 197206

  03 Nov 2007; Lars Weiler <pylon@gentoo.org> mldonkey-2.9.1.ebuild:
  stable ppc, bug #197206

  28 Oct 2007; Jeroen Roovers <jer@gentoo.org> mldonkey-2.9.1.ebuild: