@@ -6,8 +6,10 @@ AUX mldonkey.initd-2.8-r1 3401 RMD160 b5f452a952cd60afc4bc785ffb0a7b354f02b8e5 S
 AUX mldonkey.png 6835 RMD160 2ef0cbc5be4de95893b43da0281bd52f5aabb314 SHA1 bf61199ffd324558f49940a5ca6a68a36f4656b2 SHA256 c16ecc040b5ea82ed06b04a76c5d7304d7aca2f0854176aa8d78aa90831d8798
 DIST mldonkey-2.9.2.tar.bz2 2721072 RMD160 6a02d02149884d9d0a24892bd76dba48862a32ac SHA1 59c4216a67876a3af7015f7826c960306650ae34 SHA256 8c9abbfcf070de0e998def133ea25a6d5aba248a8c710e1f7c2317e798d17ed7
 DIST mldonkey-2.9.3.tar.bz2 2721401 RMD160 8cc61561bff4876f173e40b891a4ebeec19b7f0b SHA1 5247fb259387db4b75fafe4fd1970d11364db8ac SHA256 9aa9533f15322b08431ebe2b8ac893573ea9ff3666edf7dec1e8233e145e6380
+DIST mldonkey-2.9.4.tar.bz2 2721698 RMD160 fc9cb61c2e7283cee0ee4fd79e2cbc6815f389f5 SHA1 de96359e4197f230fd26363f49750a80c0ab9346 SHA256 2c6c757b58311d5b17c8b14328328ebb47d72381eae147b219100750be2aae82
 EBUILD mldonkey-2.9.2-r1.ebuild 4953 RMD160 152fc491de45a2e4beaa83377f0a2c8e151ba35f SHA1 e0bc58f4428521b260916436de137be5cc7d77ce SHA256 538928aff2c2c1e0829201926b6925e635b6bf564ebee7dccc73fe50c73ae65d
 EBUILD mldonkey-2.9.2.ebuild 4296 RMD160 ab37d64c51cf2347d4ed4fd1f4ebe59c1e824af7 SHA1 d127f41d8c5dc8196b686b9ef88d6fa736be47ef SHA256 01648c6fcd8f15695d6219607d9dec6de0a13e66af0d0b85f30d45cc9506c258
 EBUILD mldonkey-2.9.3.ebuild 4942 RMD160 622e29aa535b86cacb7891527b1c3bdd95d5ae4d SHA1 a6287baae274569d22088cbd75593b0f6ecea20d SHA256 4a9f182aed15694f1af55fae44e581db0475eaf939476f72a6fc17cf64d4d2a7
-MISC ChangeLog 30507 RMD160 abd244fa83e50376148ccb3147f5029571e2f169 SHA1 4e344d1777324e4d4975c027e0b2dce581c5ae87 SHA256 6868ce02dd50867160f390eca937fcc99293e866ea7cf5f93d06fa8d9d4bf751
+EBUILD mldonkey-2.9.4.ebuild 4949 RMD160 5fea6f4ea460b25e79df3c35bf77a85b7891d4cc SHA1 4f38fbf9d87e37df469705a64f6cd9ce32668981 SHA256 51fa92d2bd3124d1f618327f2edb32df64ae67eeb93cdd926e5717adcee0ce6c
+MISC ChangeLog 30631 RMD160 9849fc9d0fe26734c69fa48dd505c104f9458e86 SHA1 0b20d2f045ab78abfc226e54f0fc4a75b5d9249d SHA256 91e33f264c41d261c5df1f47f819ca1fbd8d5403f194a95abd1e704927908b72
 MISC metadata.xml 242 RMD160 d0edc89382298dee00d3571b62a5f457ef268751 SHA1 25511186cac54f1353a3347f72da7f5d05b9da57 SHA256 b354d71d5efbed0ff97e27564894438b42a8bd8b577007cadc6972dd37d6b5f8
