@@ -1,6 +1,11 @@
 # ChangeLog for net-p2p/mldonkey
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/mldonkey/ChangeLog,v 1.202 2008/02/25 14:42:06 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/mldonkey/ChangeLog,v 1.203 2008/03/04 14:33:38 armin76 Exp $
+
+*mldonkey-2.9.4 (04 Mar 2008)
+
+  04 Mar 2008; Raúl Porcel <armin76@gentoo.org> +mldonkey-2.9.4.ebuild:
+  Version bump
 
   25 Feb 2008; Jeroen Roovers <jer@gentoo.org> mldonkey-2.9.3.ebuild:
   Stable for HPPA (bug #211382).
